z-index bugfix try

--- a/src/components/ProductModal/index.scss
+++ b/src/components/ProductModal/index.scss
@@ -98,7 +98,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
   background-color: black;
   color: white;
 
